
DDMarlinPandora: Development package to integrate with DD4hep

  --------
 | v00-03 |
  --------
N. Nikiforou 19/02/2016
 - Merged changes from ILDCaloDigi (MarlinReco rev. 5432) into DDCaloDigi. 
   It incorporates changes to ILDCaloDigy by Daniel. The introduction of
   parameters for the cell encoding fiels was not merged, since lcio files
   produced with DDSim will have the standard conventions defined in 
   the calorimeter segmentations
 - Implemented access of subdetectors by DetType flags instead of strings
 - Elevated missing ECal parameters to ERROR
   

  
N. Nikiforou 17/02/2016
 - Merged changes from MalrinPandora 02-02-00 up to today (7c88d10)

  --------
 | v00-02 |
  --------


F.Gaede
 - enforce unique selection in getExtension(include,exclude)
   - throws exception if not unique
 - bug fix: eCalBarrelExtension -> eCalEndcapExtension
   for setting m_eCalEndCapInnerZ 
 - added DetType::FORWARD to excludeFlags for main calorimeters 
 - added DetType::AUXILIARY to excludeFlag for LCal ( exclude BeamCal )
 - DDTrackCreatorILD.cc :
   - added dd4hep units to parameters extracted from DD4hep 
   - protect against poor tracks ( ndf <0 or missing/poor parameters)
   - added debug printout for track selection



N.Nikiforou 12/02/2016:
  - Changed handling of Coil parameters: now the info is accessed from LayeredCalorimeterData 
    extensions attached to the drivers (Solenoid for CLICdp, SCoil02 for ILD).
  - Removed/commented out obsolete and unused auxilliary static functions

N.Nikiforou 11/02/2016 (pm):
  - Major overhaul using the detector type flags throught the package. No more string processor parameters
    to access detectors.
  - Protected some more against uncaught exceptions, but still more work needed
  - Added more static helper functions to access extensions by data type flags

N.Nikiforou 11/02/2016 (am):
  - Modified DDTrackCreatorILD to use det type flags. Dropped tracker/vertex detector name parameters